# vendomat

./: .gitignore  README.md  devenv.nix  devenv.yaml  flake.nix  pyproject.toml  testee.toml
.claude/skills/gitman/: SKILL.md
.claude/skills/testee/: SKILL.md
.scratch/projects/01-face-b-knowledge/: KICKOFF.md  M2-KICKOFF.md  M3-KICKOFF.md
docs/: DESIGN.md  IMPLEMENTATION_PLAN.md
lib/: mkArtifact.nix  mkMaturinWheel.nix
modules/: devenv.nix
nix/: testee.nix
src/vendomat/: __init__.py  add.py  checks.py  cli.py  deps.py  install.py  models.py
tests/: test_add.py  test_checks.py  test_cli.py  test_deps.py  test_install.py  test_models.py
